# endmembers

./: .gitattributes  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release_on_tag.yml
data/jasper_ridge/: README.md  end4.mat  jasperRidge2_R198.hdr  jasperRidge2_R198.img
data/nazca/: Dymond1981_endmember_fraction.csv  Dymond1981_endmember_ratio.csv  LP1984_endmember_fraction.csv  LP1984_endmember_ratio.csv  README.md  ggge20247-sup-001a-supinfo1a.xlsx  ggge20247-sup-001b-supinfo1b.xlsx  ggge20247-sup-001c-supinfo1c.xlsx
data/panola/: README.md  panola_data.csv  panola_end_members.csv  xufei2022_endmembers.csv
data/synthetic/: README.md  alpha=2_mixing_proportions.csv  alpha=2_samples.csv  alpha=2_shifted_samples.csv  alpha=4_mixing_proportions.csv  alpha=4_samples.csv  alpha=4_shifted_samples.csv  endmembers.csv  endmembers_shifted.csv  mixing_proportions.csv  noisefree_samples.csv  noisy_samples.csv
examples/: demo.ipynb
results/jasper_ridge/: README.md  endmembers_fitted.csv  endmembers_fitted.npy  endmembers_fitted_normalized.csv  endmembers_fitted_normalized.npy
results/nazca/: endmembers_fitted.csv
results/panola/: endmembers_fitted.csv
results/synthetic/: AA_alpha=2_endmembers.csv  AA_alpha=2_mixing_proportions.csv  AA_alpha=2_shifted_endmembers.csv  AA_alpha=2_shifted_mixing_proportions.csv  AA_alpha=4_endmembers.csv  AA_alpha=4_mixing_proportions.csv  AA_alpha=4_shifted_endmembers.csv  AA_alpha=4_shifted_mixing_proportions.csv  AA_noisefree_endmembers.csv  AA_noisefree_mixing_proportions.csv  AA_noisy_endmembers.csv  (+28 more)
(+13 files in other folders)
